<resources>
    <string name="app_name">TaskHelper</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="slide_1_title">Task Helper</string>
    <string name="slide_1_desc">The easiest way of getting things done.</string>
    <string name="slide_2_title">Need Repair</string>
    <string name="slide_2_desc">Don\'t Worry, We got you!</string>
    <string name="slide_3_title">Order Services</string>
    <string name="slide_3_desc">In few simple steps.</string>
    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> TaskHelper -> clear data</string>
    <string name="play_again">Play Again</string>
    <string name="home">Home</string>
    <string name="custom">CUSTOMER CARE</string>
    <string name="about">ABOUT US</string>
    <string name="help">HELP</string>
    <string name="listvsgrid1">LIST/GRID</string>
    <string name="bookings">Bookings</string>
    <string name="profile">Profile</string>
    <string name="share">SHARE TASKHELPER</string>
    <string name="rateus">RATE US</string>
    <string name="logout">LOGOUT</string>
    <string name="versionno">VERSION 1.0.0</string>
    <string name="cancel">CANCEL</string>
    <string name="serviceensure">TaskHelper Ensures</string>
    <string name="booknow1">BOOK NOW</string>


    <!--login activity strings-->
    <string name="action_sign_in_short">Sign Up</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered in TaskHelper now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="emailidlogin">User Loged-in</string>
    <string name="name">Name</string>
    <string name="phone">Contact no.</string>
    <string name="address">Please enter your details</string>
    <string name="addressdesc">Please be precise and accurate</string>
    <string name="addressline1">Address Line 1</string>
    <string name="addressline2">Address Line 2</string>
    <array name="cities">
        <item>Mumbai</item>
    </array>
    <string name="confirmation">You have to press the send button in the email application for confirmation of the service</string>
    <string name="submit">SUBMIT</string>
    <string name="skip1">Skip</string>
    <string name="getverfied">The verification mail has been sent to your registered email address. Please verify the email and click the button below to continue</string>
    <string name="verify">Verfiy Me!</string>
    <string name="basecost">Inspection/Visit charges of ₹249 will be charged if service is not availed post inspection.</string>
    <string name="material">Material cost will be charged extra, exclusive of service provided.</string>
    <string name="split">SPLIT AC</string>
    <string name="window">WINDOW AC</string>
    <string name="info">Information about service</string>
    <!--Aircondiitioningform-->
    <string name="ac1">AC Servicing(Charges Rs.349)</string>
    <string name="ac2">AC Repair</string>
    <string name="ac3">AC Installation</string>
    <string name="ac4">AC Uninstalling</string>
    <string name="ac5">AC Gas Charging</string>
    <string name="aboutus">The TaskHelper is your solution to the tasks in simple, easy and efficient way.Task helper plays the role of helping hand in your day to day task.Our vision is to provide best professional services at reasonable prices and keeping customer satisfaction at the peak.</string>

</resources>
