<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ProgressBar
        android:id="@+id/progressBarbook"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        android:layout_alignParentRight="true"
        android:visibility="gone"
        android:layout_alignParentTop="true"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:id="@+id/descofaddress">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/psb"
            android:text="@string/info"
            android:textColor="@color/colorPrimary" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/descofaddress"
        android:layout_margin="16dp"
        android:id="@+id/addresses">
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac1"
            android:fontFamily="@font/psb"
            android:id="@+id/ac1"
            android:textSize="20sp"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac2"
            android:fontFamily="@font/psb"
            android:id="@+id/ac2"
            android:textSize="20sp"
            android:layout_marginTop="16dp"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac3"
            android:fontFamily="@font/psb"
            android:id="@+id/ac3"
            android:textSize="20sp"
            android:layout_marginTop="16dp"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac4"
            android:fontFamily="@font/psb"
            android:id="@+id/ac4"
            android:textSize="20sp"
            android:layout_marginTop="16dp"/>
        <android.support.v7.widget.AppCompatCheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ac5"
            android:fontFamily="@font/psb"
            android:id="@+id/ac5"
            android:textSize="20sp"
            android:layout_marginTop="16dp"/>

    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/psb"
        android:text="Others"
        android:layout_below="@id/addresses"
        android:layout_margin="16dp"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:id="@+id/others"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_below="@id/others"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:inputType="textMultiLine"
        android:id="@+id/otheredit"
        android:layout_marginBottom="8dp"/>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#c4001d"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="16dp"
        android:layout_marginBottom="8dp"
        app:contentPadding="4dp"
        android:elevation="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/submitButton">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/psb"
            android:textColor="#fff"
            android:textSize="20sp"
            android:text="@string/booknow1"
            android:layout_gravity="center_horizontal" />
    </android.support.v7.widget.CardView>
</RelativeLayout>