<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignupActivity">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/taskhelperlogo"
        android:scaleType="centerCrop"
        android:id="@+id/applogologin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@+id/applogologin"
        android:id="@+id/emailandpassword">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/name"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/name"
            android:maxLines="1"
            android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:id="@+id/phone"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:hint="@string/email"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:id="@+id/email"
            android:maxLines="1"
            android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:textSize="16sp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:id="@+id/password"
                android:fontFamily="sans-serif"/>
        </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/sign_up_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/psb"
        android:background="@color/colorAccent"
        android:text="@string/action_sign_in_short"
        android:textColor="@android:color/black"
        android:textStyle="bold"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"/>

    </LinearLayout>
    <TextView
        android:id="@+id/btn_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/btn_forgot_password"
        android:textAllCaps="false"
        android:fontFamily="@font/psb"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/emailandpassword"
        android:layout_marginTop="4dp"/>
    <TextView
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_link_to_login"
        android:textAllCaps="false"
        android:layout_below="@id/btn_reset_password"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/psb"
        android:textColor="@color/colorPrimary"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/skip1"
        android:textAllCaps="false"
        android:fontFamily="@font/psb"
        android:id="@+id/skipbutton"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="16dp"
        android:layout_alignParentBottom="true"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:layout_alignParentRight="true"
        android:visibility="gone"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>