<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_margin="8dp"
        android:layout_alignParentRight="true"
        android:visibility="gone"
        android:layout_alignParentTop="true"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="16dp"
        android:id="@+id/descofaddress">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:fontFamily="@font/psb"
            android:text="@string/address"
            android:textColor="@color/colorPrimary"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:fontFamily="@font/psr"
            android:layout_marginTop="8dp"
            android:textColor="@color/colorAccent"
            android:text="@string/addressdesc"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_below="@id/descofaddress"
        android:layout_margin="16dp"
        android:id="@+id/addresses">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/name"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:id="@+id/name"
                android:fontFamily="@font/psb"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:hint="@string/phone"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:id="@+id/phone"
                android:fontFamily="@font/psb"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/addressline1"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:id="@+id/address1"
                android:fontFamily="@font/psb"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/addressline2"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:id="@+id/address2"
                android:fontFamily="@font/psb"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_below="@id/addresses"
        android:layout_marginTop="12dp"
        android:entries="@array/cities"
        android:id="@+id/spinnerforcities"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/spinnerforcities"
        android:textSize="16sp"
        android:fontFamily="@font/psr"
        android:textColor="@color/colorAccent"
        android:text="@string/confirmation"
        android:layout_margin="16dp"
        />
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#c4001d"
        android:layout_marginRight="24dp"
        android:layout_marginLeft="24dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:cardCornerRadius="16dp"
        android:layout_marginBottom="16dp"
        app:contentPadding="4dp"
        android:elevation="8dp"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?attr/selectableItemBackground"
        android:id="@+id/submitButton">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/psb"
            android:textColor="#fff"
            android:textSize="20sp"
            android:text="@string/cancel"
            android:layout_gravity="center_horizontal"
            />
    </android.support.v7.widget.CardView>
</RelativeLayout>