<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignupActivity">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/taskhelperlogo"
        android:scaleType="centerCrop"
        android:id="@+id/applogologin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/lbl_forgot_password"
        android:textColor="@color/colorPrimary"
        android:textSize="20sp"
        android:layout_below="@id/applogologin"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/psb"
        android:id="@+id/forgot_password"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:fontFamily="@font/psb"
        android:text="@string/forgot_password_msg"
        android:textColor="@color/colorPrimary"
        android:textSize="14sp"
        android:layout_below="@+id/forgot_password"
        android:padding="8dp"
        android:id="@+id/sentence"/>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_below="@+id/sentence"
        android:layout_margin="8dp"
        android:id="@+id/resetid">

        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textColorHint="@color/colorAccent" />
    </android.support.design.widget.TextInputLayout>
    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="match_parent"
        android:fontFamily="@font/psb"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dip"
        android:background="@color/colorAccent"
        android:text="@string/btn_reset_password"
        android:textColor="@android:color/black"
        android:layout_below="@id/resetid"
        android:layout_margin="8dp"/>
    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@color/colorAccent"
        android:text="@string/btn_back"
        android:textColor="@color/colorPrimary"
        android:layout_below="@id/btn_reset_password"
        android:layout_centerHorizontal="true"
        android:fontFamily="@font/psb"/>
    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>