<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignupActivity">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/taskhelperlogo"
        android:scaleType="centerCrop"
        android:id="@+id/applogologin"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="8dp"
        android:layout_below="@+id/applogologin"
        android:id="@+id/emailandpassword"
        >
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:textSize="20sp"
                android:textColor="@color/black"
                android:id="@+id/email"
                android:maxLines="1"
                android:singleLine="true"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/hint_password"
                android:textSize="20sp"
                android:maxLines="1"
                android:singleLine="true"
                android:textColor="@color/black"
                android:id="@+id/password"/>

        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/psb"
            android:background="@color/colorAccent"
            android:text="@string/btn_login"
            android:textColor="@android:color/black"
            android:textStyle="bold" />

    </LinearLayout>
    <Button
        android:id="@+id/btn_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:text="@string/btn_forgot_password"
        android:textAllCaps="false"
        android:fontFamily="@font/psb"
        android:textColor="@color/colorPrimary"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/emailandpassword"/>
    <Button
        android:id="@+id/btn_signup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:layout_centerHorizontal="true"
        android:text="@string/btn_link_to_register"
        android:textAllCaps="false"
        android:layout_below="@id/btn_reset_password"
        android:fontFamily="@font/psb"/>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_alignParentBottom="true"/>

</RelativeLayout>