<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.EditProfileActivity"
    android:orientation="vertical">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbarboo"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/appbargrad"
        android:elevation="4dp"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleTextAppearance="@font/psb">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="24sp"
                android:layout_centerVertical="true"
                android:text="Edit Profile"
                android:fontFamily="@font/psb"
                android:textColor="@color/dot_active2"
                android:layout_alignParentLeft="true"/>
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_alignParentRight="true"
                android:visibility="gone"
                />
        </RelativeLayout>
    </android.support.v7.widget.Toolbar>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/name"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/edittext1"
            android:maxLines="1"
            android:fontFamily="@font/psb"
            android:singleLine="true"
            android:layout_margin="16dp"/>
    </android.support.design.widget.TextInputLayout>
    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:hint="@string/phone"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:id="@+id/edittext2"
            android:maxLines="1"
            android:fontFamily="@font/psb"
            android:singleLine="true"
            android:layout_margin="16dp"/>
    </android.support.design.widget.TextInputLayout>
    <!--<android.support.design.widget.TextInputLayout-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content">-->
        <!--<EditText-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:inputType="textEmailAddress"-->
            <!--android:hint="@string/email"-->
            <!--android:textSize="20sp"-->
            <!--android:textColor="@color/black"-->
            <!--android:id="@+id/edittext3"-->
            <!--android:maxLines="1"-->
            <!--android:fontFamily="@font/psb"-->
            <!--android:singleLine="true"-->
            <!--android:layout_margin="16dp"/>-->
    <!--</android.support.design.widget.TextInputLayout>-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:text="@string/btn_reset_password"
        android:textColor="@color/colorPrimary"
        android:fontFamily="@font/psb"
        android:id="@+id/resetpassword"
        android:layout_marginTop="16dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:fontFamily="@font/psb"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:id="@+id/onsubmit"/>
</LinearLayout>